Primeiras estruturas html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Portfolio/img/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>Marcos Wlrich</title>
 </head>
 <body>
+
+    <header>
+        <nav class="links">
+            <a href="/">Sobre</a>
+            <a href="/">Projetos</a>
+        </nav>
+    </header>
+
+    <div id="mess">
+        <img src="https://avatars1.githubusercontent.com/u/19244780?s=460&u=d4fc772a9514ee4802e27d88f258a0f0bec0aaa2&v=4" alt="Marcos Wlrich">
+        <h1>Marcos Wlrich</h1>
+        <h2> JavaScript Developer</h2>
+        <P>Programador full-stack, trabalha com as tecnologias mais inovadoras do mercado como Node.js e React.js </P>
+    </div>
+
+    <div id="link-center" class="links">
+        <a  href="https://github.com/marcoswlrich" target="_blank">Github</a>
+        <a href="https://twitter.com/marcoswlrich" target="_blank">Twitter</a>
+        <a href="https://www.linkedin.com/in/marcos-wlrich-120020190/" target="_blank">Linkedin</a>
+    </div>
+
  
     <script src=""></script>
 </body>
