Estilização dos cards

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,8 +12,8 @@
 
     <header>
         <nav class="links">
-            <a href="/">Sobre</a>
-            <a href="/">Projetos</a>
+            <a href="/Portfolio/index.html">Sobre</a>
+            <a href="/Portfolio/class.html">Projetos</a>
         </nav>
     </header>
 
@@ -21,7 +21,8 @@
         <img src="https://avatars1.githubusercontent.com/u/19244780?s=460&u=d4fc772a9514ee4802e27d88f258a0f0bec0aaa2&v=4" alt="Marcos Wlrich">
         <h1>Marcos Wlrich</h1>
         <h2> JavaScript Developer</h2>
-        <P>Programador full-stack, trabalha com as tecnologias mais inovadoras do mercado como Node.js e React.js </P>
+        <P>Programador full-stack, com experiência nas tecnologias mais inovadoras do mercado como Node.js e React.js, tem
+            como objetivo criar aplicações inovadoras e com designer moderno. </P>
     </div>
 
     <div id="link-center" class="links">
